--- a/ui-src/public/index.html
+++ b/ui-src/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Holochain | Peer Chat</title>
+    <title>Holochain | Basic Chat</title>
   </head>
   <body>
     <noscript>
